# quantlens

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: streamlit_app.py
docs/adr/: 0001-bm25-over-embeddings.md  0002-local-first-llm.md  0003-rule-based-guardrails-and-fallback.md  0004-offline-deterministic-evals.md  README.md
scripts/: benchmark.py  finetune_lora.py
src/quantlens/: __init__.py  config.py  evals.py  explain.py  guardrails.py  llm.py  rag.py
src/quantlens/api/: main.py
src/quantlens/data/: __init__.py  market.py
src/quantlens/knowledge/: __init__.py  glossary.md
src/quantlens/quant/: __init__.py  signals.py
tests/: test_api.py  test_evals.py  test_guardrails.py  test_rag.py  test_signals.py
